Meu Site atualizado html.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <link rel="stylesheet" href="estilos.css">
     </head>
     <body>
-        <h1>Aprendendo GitHub</h1>
+        <h1>Paz de Deus ❤</h1>
+        <h2>Como vocês estâo??</h2>
+        <h3>Bem vindos a minha página!!</h2>
+        <h4>Uma ótima quinta feira para todos vocês🥰</h3>
     </body>
 </html>
