--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     </head>
     <body>
         <h1>Paz de Deus ❤</h1>
-        <h2>Como vocês estâo??</h2>
+        <h2>Como vocês estão??</h2>
         <h3>Bem vindos a minha página!!</h2>
         <h4>Uma ótima quinta feira para todos vocês🥰</h3>
+        <p>by Bibia Lopes</p>
+        <img src="https://i.pinimg.com/736x/37/e5/97/37e597b5f953e2cdd065ad44236c5e2a.jpg">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qVriK-z7JBA?si=Z6ruCPM6mKjFDYMJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
     </body>
 </html>
